2004-11-05 Alain Magloire
	More framework for the formatter.
	* src/org/eclipse/cdt/core/ToolFactory.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatter.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatterConstants.java
	
2004-11-01 Alain Magloire

	Change to the errorParserManager, ... finally
	- do no reorder the arbitrary the error parsers array
	- if IErrorParser.processLine() return true bail out.

	* src/org/eclipse/cdt/core/ErrorParserManager.java
	* plugin.xml

2004-10-14 David Inglis

	Move BinaryConfig into internal.model was no need to be public, also fixed it to
	be lazy when creating parser interface.
	
	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	* model/org/eclipse/cdt/internal/core/model/CProject.java
	* src/org/eclipse/cdt/core/BinaryParserConfig.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* src/org/eclipse/cdt/core/ICExtensionReference.java	
	* src/org/eclipse/cdt/internal/core/CExtensionReference.java

	Removed 
	* model/org/eclipse/cdt/internal/core/model/BinaryParserConfig.java
	
2004-10-12 Vladimir Hirsl

	Fix for PR 69604 [Templates] Instantiating template with deferred template instance
	Original Andrew's patch + a cleanup of processed deferred instntiations.
	
	* parser/org/eclipse/cdt/internal/core/parser/pst/DeferredTemplateInstance.java
	* parser/org/eclipse/cdt/internal/core/parser/pst/TemplateSymbol

2004-10-06 Vladimir Hirsl

	Fix for PR 75728 [ParserSymbolTable] NPE in TypeInfoProvider.newTypeInfo
	Corrected mappings added to to TemplateSymbol._defnParameterMap
	
	* parser/org/eclipse/cdt/internal/core/parser/ast/TemplateFactory.java
	
	Another NPE fix (caused by the fact that UndefinedTemplateSymbols do not have
	any associated extension objects).
	
	* parser/org/eclipse/cdt/internal/core/parser/ast/complete/CompleteParseASTFactory.java

2004-09-30 Vladimir Hirsl

	Fix for PR 60307 [Templates] Template parameter qualified types not supported