@@ -910,6 +910,13 @@ public class CModelManager implements IResourceChangeListener, ICDescriptorListe
 						rootDelta.insertDeltaTree(projectDelta.getElement(), projectDelta);
 						insertedTree = true;
 					}
+					IResourceDelta[] resourceDeltas = delta.getResourceDeltas();
+					if (resourceDeltas != null) {
+						for (int i = 0, length = resourceDeltas.length; i < length; i++) {
+							rootDelta.addResourceDelta(resourceDeltas[i]);
+							insertedTree = true;
+						}
+					}
 				} else {
 					rootDelta.insertDeltaTree(element, delta);
 					insertedTree = true;
